# python-paseto

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  pylama.ini  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: ci.yaml  codescan.yaml  release_pypi.yaml  test.yaml
docs/dev/: Release.md
docs/examples/: example1.py  example2.py  example3.py  example4.py
paseto/: __init__.py  exceptions.py
paseto/crypto/: .gitignore  libsodium.pyx  libsodium_wrapper.py  primitives.py
paseto/paserk/: __init__.py  keys.py
paseto/protocol/: common.py  util.py  version2.py  version4.py
tests/: conftest.py  test_benchmark.py  util.py
tests/crypto/: test_libsodium_wrapper.py
tests/docs/examples/: test_examples.py
tests/paserk/: test_keys.py
tests/protocol/: test_common.py  test_official_test_vectors_v2.py  test_official_test_vectors_v4.py  test_paseto_v2_test_vectors.py  test_test_vectors.py  test_util.py  test_version2.py  test_version4.py
