[tool.poetry]
name = "python-paseto"
version = "0.5.2"
description = "Platform-Agnostic Security Tokens for Python"
authors = []
license = "MIT"
packages = [{ include = "paseto" }]
readme = "README.md"
homepage = "https://github.com/purificant/python-paseto"
repository = "https://github.com/purificant/python-paseto"
documentation = "https://github.com/purificant/python-paseto"
keywords = ["paseto", "token", "security", "crypto"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
python = "^3.8"
pysodium = "^0.7.17"

[tool.poetry.dev-dependencies]
black = "^23.12"
codespell = "^2.2.6"
coverage = "^6"
coveralls = "^3.3"
cython = "^3.0.7"
isort = "^5.13"
mypy = "^1.7"
pylama = "^8.4"
pylint = "^3.0"
pynacl = "^1.5"
pytest = "^7.4"
pytest-benchmark = "^4.0"

[tool.black]
exclude = '/(submodules)/'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
