[tool.poetry]
name = "python-paseto"
version = "0.5.2"
description = "Platform-Agnostic Security Tokens for Python"
authors = []
license = "MIT"
packages = [{ include = "paseto" }]
readme = "README.md"
homepage = "https://github.com/purificant/python-paseto"
repository = "https://github.com/purificant/python-paseto"
documentation = "https://github.com/purificant/python-paseto"
keywords = ["paseto", "token", "security", "crypto"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
python = "^3.9"
pysodium = "^0.7.17"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
codespell = "^2.2.6"
coverage = "^7"
cython = "^3.0.7"
isort = "^6.0"
mypy = "^1.7"
pylama = "^8.4"
pylint = "^3.0"
pynacl = "^1.5"
pytest = "^8.1"
pytest-benchmark = "^4.0"
ruff = "^0.13.0"
setuptools = "^80.9.0"

[tool.black]
exclude = '/(submodules)/'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"
