[tool.poetry]
name = "python-paseto"
version = "0.5.2"
description = "Platform-Agnostic Security Tokens for Python"
authors = []
license = "MIT"
packages = [{ include = "paseto" }]
readme = "README.md"
homepage = "https://github.com/purificant/python-paseto"
repository = "https://github.com/purificant/python-paseto"
documentation = "https://github.com/purificant/python-paseto"
keywords = ["paseto", "token", "security", "crypto"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
python = "^3.10"
pysodium = "^0.7.17"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
codespell = "^2.2.6"
coverage = "^7"
cython = "^3.0.7"
isort = "^8.0"
mypy = "^1.7"
pylint = "^4.0"
pynacl = "^1.5"
pre-commit = "^4.0"
pytest = "^9.0"
pytest-benchmark = "^5.2"
ruff = "^0.15.0"
setuptools = "^82.0"

[tool.black]
exclude = '/(submodules)/'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"
